...
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/tvAppNameSpaced"
                        android:textAppearance="@style/TextAppearance.SplitBill.HeaderTitle" />

                    <TextView
                        android:id="@+id/tvGreeting"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:ellipsize="end"
                        android:maxLines="1"
                        android:textAppearance="@style/TextAppearance.SplitBill.HeaderSubtitle"
                        tools:text="Hola, Julián" />
...
